AI task resources UI updated

--- a/backend/app/core/services/test.ipynb
+++ b/backend/app/core/services/test.ipynb
@@ -103,7 +103,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from agents.search_agent import root_agent\n",
+    "\n",
+    "from backend.app.core.services.agentCall_service import call_agent\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
